apps/seerr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr
spec:
  replicas: 1
  serviceName: seerr
  selector:
    matchLabels:
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
    spec:
      containers:
        - name: seerr
          image: seerr
          ports:
            - name: http
              containerPort: 5055
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 360
          volumeMounts:
            - name: config
              mountPath: /app/config
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config
