apps/seerr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
spec:
  defaultBackend:
    service:
      name: seerr
      port:
        name: http
  tls:
    - hosts:
        - seerr
